# GenPorMed

./: .gitignore  CITATION.cff  CMakeLists.txt  GenerateSTL.py  LICENSE  Makefile  Porous2D.cpp  Porous2D.h  Porous3D.cpp  Porous3D.h  QSGS-3D.cpp  QSGS_2D.cpp  QSGS_3D.cpp  README.md  output_image_2D.plt  run.cpp
